objects/Linked_Service_Sheet__c/Linked_Service_Sheet__c.object-meta.xml
<CustomObject>
    <label>Linked Service Sheet</label>
    <nameField>
        <displayFormat>LSS - {00000}</displayFormat>
        <label>Linked Service Sheet No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Service Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>