objects/Linked_Service_Sheet__c/fields/Service_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Sheet</label>
    <referenceTo>Engineer_Checklist__c</referenceTo>
    <relationshipLabel>Linked Service Sheets</relationshipLabel>
    <relationshipName>Linked_Service_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>