objects/Linked_Service_Sheet__c/fields/Track_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Track_Opportunity__c</fullName>
    <label>Track Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>